# rss2webhook

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE
.github/: dependabot.yml
.github/workflows/: cargo.yml
src/: json.rs  main.rs  rss.rs
test/data/: rss2webhook_data.json
