[package]
name = "rss2webhook"
version = "0.1.0"
edition = "2021"

[dependencies]
rss = { version = "2.0.12", default-features = false }
tokio = { version = "1.45.0", default-features = false, features = [
  "rt-multi-thread",
  "macros",
] }
minreq = { version = "2.13.4", default-features = false, features = [
  "https-native",
] }
serde_json = { version = "1.0.140", default-features = false, features = [
  "alloc",
] }
